--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -138,7 +138,9 @@ body.no-scroll {
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    border: 0 !important;
+    outline: none;
+    box-shadow: none;
   }
   body {
     @apply bg-background text-foreground;
